pamc/src/tests/sample_code/should_fail/type_check/illegal_type/variant_param.ph
type U {
    .U: U,
}

type Foo {
    .Bar(x: U.U): Foo,
}
